[Mac] Restore the graphics state for the Security State Decoration

BUG=647854

Review-Url: https://codereview.chromium.org/2410283003
Cr-Commit-Position: refs/heads/master@{#424783}

Former-commit-id: bd65c0438820420be292ee912324e2e4f009bc6d