chrome/browser/ui/cocoa/location_bar/security_state_bubble_decoration.mm
@@ -176,7 +176,7 @@ void SecurityStateBubbleDecoration::DrawInFrame(NSRect frame,
 
     // Transform the coordinate system to adjust the baseline on Retina.
     // This is the only way to get fractional adjustments.
-    // gfx::ScopedNSGraphicsContextSaveGState save_graphics_state;
+    gfx::ScopedNSGraphicsContextSaveGState save_graphics_state;
     CGFloat line_width = [control_view cr_lineWidth];
     if (line_width < 1) {
       NSAffineTransform* transform = [NSAffineTransform transform];
@@ -235,10 +235,6 @@ void SecurityStateBubbleDecoration::DrawInFrame(NSRect frame,
     divider_color = [divider_color colorWithAlphaComponent:divider_alpha];
     [divider_color set];
     [line stroke];
-
-    // Revert the transformation.
-    [transform invert];
-    [transform concat];
   }
 }
 
